wishlist navigation overlap fixed

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ nav {
   position: sticky;
   top: 0;
   background-color: white;
+  z-index: 1;
 }
 
 .home-page {
